# rust-openmpt-sys

./: Cargo.toml  build.rs
examples/: play.rs
src/: lib.rs
